<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/exercise2xml"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorAccent"
    tools:context=".Exercises2">


    <TextView
        android:id="@+id/textviewup"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:text="@string/ex2_num" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/ex2_1" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/ex2_2" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/ex2_3" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:text="@string/ex2_4" />

</LinearLayout>