<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".Exercises3">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ex3_head"
            android:paddingBottom="23sp"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ex3_image1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:onClick="getT"
            android:src="@drawable/rubbish" />

        <ImageView
            android:id="@+id/ex3_image2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:onClick="getT"
            android:src="@drawable/rubbish" />

        <ImageView
            android:id="@+id/ex3_image3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:onClick="getT"
            android:src="@drawable/rubbish" />

        <ImageView
            android:id="@+id/ex3_image4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:onClick="getT"
            android:src="@drawable/rubbish" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ex3_text1"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"
            android:onClick="getT"
            android:text="@string/ex3_txt1" />
        <TextView
            android:id="@+id/ex3_text2"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"
            android:onClick="getT"
            android:text="@string/ex3_txt2" />
        <TextView
            android:id="@+id/ex3_text3"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"
            android:onClick="getT"
            android:text="@string/ex3_txt3" />
        <TextView
            android:id="@+id/ex3_text4"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"
            android:onClick="getT"
            android:text="@string/ex3_txt4" />

    </LinearLayout>


    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/rv_list"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--tools:listitem="@layout/im_list_item" />-->

</LinearLayout>